--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "@clerk/nextjs": "^5.1.6",
     "@hookform/resolvers": "^3.6.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@tanstack/react-table": "^8.19.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.399.0",
     "mongoose": "^8.4.4",
     "next": "14.2.4",
     "react": "^18",
